[package]
name = "lexgen"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
description = "A fully-featured lexer generator implemented as a proc macro"
edition = "2018"
license = "MIT"
homepage = "https://github.com/osa1/lexgen"

[lib]
name = "lexgen"
proc_macro = true

[dependencies]
fxhash = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
