[package]
name = "lexgen"
version = "0.2.2"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
description = "A fully-featured lexer generator implemented as a proc macro"
edition = "2018"
license = "MIT"
homepage = "https://github.com/osa1/lexgen"

[lib]
name = "lexgen"
proc_macro = false

[[bin]]
name = "lexgen_test"
path = "bin/lexgen_test.rs"

[dependencies]
fxhash = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[profile.release]
debug = true

[[bench]]
name = "benchmarks"
harness = false
