[package]
name = "lexgen"
version = "0.8.1"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
description = "A fully-featured lexer generator implemented as a proc macro"
edition = "2021"
license = "MIT"
homepage = "https://github.com/osa1/lexgen"
categories = ["compilers", "development-tools", "parsing"]
readme = "../../README.md"
repository = "https://github.com/osa1/lexgen"

[[bin]]
name = "lexgen_test"
path = "bin/lexgen_test.rs"

[dependencies]
fxhash = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }

[dev-dependencies]
criterion = "0.3"
lexgen_util = { path = "../lexgen_util" }

[[bench]]
name = "benchmarks"
harness = false
